--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;1,100&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;1,100&display=swap");
 
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+p {
+    color: rgb(90, 90, 90);
+}
+
 .title {
   font-family: "Poppins", sans-serif;
   font-size: 5rem;
   font-weight: 500;
   width: 100%;
   text-align: center;
+  padding: 1.5rem;
 }
 
-.begging{
-    text-align: center;
-    font-family: "Poppins", sans-serif;
+.item--em {
+  color: crimson;
+}
+
+.begging {
+  text-align: center;
+  font-family: "Poppins", sans-serif;
 }
