--- a/styles.css
+++ b/styles.css
@@ -36,14 +36,29 @@ p {
   font-family: "Poppins", sans-serif;
 }
 
-@media only screen and (max-width: 290px) {
+@media only screen and (min-width: 1001px) {
   .title {
-    font-size: 1.5rem;
+    font-size: 5rem;
+  }
+  .hidifier {
+    display: inline;
   }
 }
 
-@media only screen and (max-width: 550px) {
+@media only screen and (min-width: 501px) and (max-width: 1000px) {
   .title {
     font-size: 2.5rem;
+  }
+  .hidifier {
+    display: block;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .title {
+    font-size: 1.5rem;
+  }
+  .hidifier {
+    display: block;
   }
 }
